// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should hide logout button when no password is set 1`] = `
<DocumentFragment>
  <div
    __source="[object Object]"
    class="navbar mb-4 shadow-lg bg-primary text-neutral-content rounded-box flex-wrap xs:flex-nowrap"
  >
    <div
      __source="[object Object]"
      class="navbar-start"
    >
      <a
        __source="[object Object]"
        class="btn btn-outline btn-accent"
        href="/"
      >
        zurück
      </a>
    </div>
    <div
      __source="[object Object]"
      class="px-2 mx-2 navbar-center w-full xs:w-auto order-first xs:order-none justify-center"
    >
      <span
        __source="[object Object]"
        class="text-lg sm:text-3xl sm:font-thin"
      >
        SimpleVolumeControl
      </span>
    </div>
    <div
      __source="[object Object]"
      class="navbar-end"
    />
  </div>
</DocumentFragment>
`;

exports[`Header should render correctly on home page 1`] = `
<DocumentFragment>
  <div
    __source="[object Object]"
    class="navbar mb-4 shadow-lg bg-primary text-neutral-content rounded-box flex-wrap xs:flex-nowrap"
  >
    <div
      __source="[object Object]"
      class="navbar-start"
    />
    <div
      __source="[object Object]"
      class="px-2 mx-2 navbar-center w-full xs:w-auto order-first xs:order-none justify-center"
    >
      <span
        __source="[object Object]"
        class="text-lg sm:text-3xl sm:font-thin"
      >
        SimpleVolumeControl
      </span>
    </div>
    <div
      __source="[object Object]"
      class="navbar-end"
    />
  </div>
</DocumentFragment>
`;

exports[`Header should render correctly on other pages 1`] = `
<DocumentFragment>
  <div
    __source="[object Object]"
    class="navbar mb-4 shadow-lg bg-primary text-neutral-content rounded-box flex-wrap xs:flex-nowrap"
  >
    <div
      __source="[object Object]"
      class="navbar-start"
    >
      <a
        __source="[object Object]"
        class="btn btn-outline btn-accent"
        href="/"
      >
        zurück
      </a>
    </div>
    <div
      __source="[object Object]"
      class="px-2 mx-2 navbar-center w-full xs:w-auto order-first xs:order-none justify-center"
    >
      <span
        __source="[object Object]"
        class="text-lg sm:text-3xl sm:font-thin"
      >
        SimpleVolumeControl
      </span>
    </div>
    <div
      __source="[object Object]"
      class="navbar-end"
    />
  </div>
</DocumentFragment>
`;
